--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     mocht je interesse hebben om het gehele script door te willen lezen klik <a href="https://shrek.fandom.com/wiki/Shrek_(film)/Transcript">hier!</a>
     <p><strong>De muziek</strong></p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_S7WEVLbQ-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <p>Hier nog een video over een nummer die gebruikt wordt in de shrekfilms.</p>
+    <h2>I need a hero</h2>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/sx9CBt-kkn4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
