--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <p><strong>De muziek</strong></p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/_S7WEVLbQ-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>Hier nog een video over een nummer die gebruikt wordt in de shrekfilms.</p>
-    <h2>I need a hero</h2>
+    <h2>I need a heroooo!</h2>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/sx9CBt-kkn4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
